--- a/src/Components/Header/Showcase/css/button.css
+++ b/src/Components/Header/Showcase/css/button.css
@@ -2,14 +2,14 @@
     margin-top: -320px;
     z-index: 9999;
     position: absolute;
-    margin-left: 20%;
+    margin-left: 18.2%;
 }
 .contact-explore-btn button{
     font-family: "Poppins", sans-serif;
     border: none;
     border-radius: 5px;
     background: #fa4319;
-    padding: 10px 40px;
+    padding: 12px 40px;
     color: #ffffff;
     margin-right: 20px;
 }
@@ -23,8 +23,8 @@
     border: none;
     border-radius: 5px;
     background: #ffffff;
-    padding: 10px 40px;
-    color: #002a47;
+    padding: 12px 40px;
+    color: #fa4319;
     margin-right: 10px;
 }
 .contact-explore-btn button:last-child:hover{
