--- a/src/Components/Header/Showcase/css/Carousel.css
+++ b/src/Components/Header/Showcase/css/Carousel.css
@@ -52,7 +52,7 @@
   color: #09273d;
 }
 .carousel-caption h1 span.text-color {
-  color: #fa4319;
+  color: #FC0B0B;
 }
 .carousel-caption p {
   font-weight: 400;
