--- a/src/Components/Home/WhyChooseUs/WhyChooseUs.css
+++ b/src/Components/Home/WhyChooseUs/WhyChooseUs.css
@@ -19,17 +19,17 @@
 .wcu-before {
   width: 20px;
   height: 66px;
-  background: #fa4319;
+  background: #FC0B0B;
   position: absolute;
-  margin-left: 25.3%;
+  margin-left: 480px;
   margin-top: -4px;
 }
 .wcu-after {
   width: 20px;
   height: 66px;
-  background: #fa4319;
+  background: #FC0B0B;
   position: absolute;
-  margin-left: 41.8%;
+  margin-left: 795px;
   margin-top: -4px;
 }
 
@@ -46,7 +46,7 @@
 .Delivery-container .icon {
   font-size: 45px;
   margin: 0px 20px;
-  color: #fa4319;
+  color: #FC0B0B;
   display: flex;
 }
 .Delivery-content h3 {
@@ -74,7 +74,7 @@
   padding: 40px;
   margin: 0px 40px;
   text-align: center;
-  color: #fa4319;
+  color: #FC0B0B;
   position: relative;
 }
 .parcel-delivered-count p,
@@ -89,7 +89,7 @@
   position: absolute;
   width: 100px;
   height: 100px;
-  border: 5px solid #fa4319;
+  border: 5px solid #FC0B0B;
   border-bottom: none;
   border-right: none;
   left: 0px;
@@ -104,7 +104,7 @@
 }
 .Expert-employee-count small,
 .branches-count small{
-  color: #fa4319;
+  color: #FC0B0B;
 }
 .Expert-employee-count:hover small,
 .branches-count:hover small{
@@ -113,7 +113,7 @@
 .Expert-employee-count:hover,
 .branches-count:hover{
   cursor: pointer;
-  color: #fa4319;
+  color: #FC0B0B;
 }
 .Expert-employee-count:hover:after,
 .branches-count:hover:after{
@@ -121,7 +121,7 @@
   position: absolute;
   width: 100px;
   height: 100px;
-  border: 5px solid #fa4319;
+  border: 5px solid #FC0B0B;
   border-bottom: none;
   border-right: none;
   left: 0px;
