home page design done

--- a/src/Components/Header/Showcase/css/button.css
+++ b/src/Components/Header/Showcase/css/button.css
@@ -2,7 +2,7 @@
     margin-top: -320px;
     z-index: 9999;
     position: absolute;
-    margin-left: 18.2%;
+    margin-left: 305px;
 }
 .contact-explore-btn button{
     font-family: "Poppins", sans-serif;
