--- a/src/Components/Home/ServiceProvide/ServiceProvide.css
+++ b/src/Components/Home/ServiceProvide/ServiceProvide.css
@@ -2,7 +2,7 @@
   margin-top: 20px;
   font-family: "Poppins", sans-serif;
   background: linear-gradient(#c5d3dd85, #c5d3dd85),
-  linear-gradient(#c5d3dd85, #c5d3dd85),
+    linear-gradient(#c5d3dd85, #c5d3dd85),
     url(../../../assets/img/service-bg.png) center center fixed;
   background-attachment: fixed;
   background-repeat: no-repeat;
@@ -13,7 +13,7 @@
 .swp-before {
   width: 20px;
   height: 66px;
-  background: #FC0B0B;
+  background: #fc0b0b;
   position: absolute;
   margin-left: 465px;
   margin-top: -4px;
@@ -21,7 +21,7 @@
 .swp-after {
   width: 20px;
   height: 66px;
-  background: #FC0B0B;
+  background: #fc0b0b;
   position: absolute;
   margin-left: 810px;
   margin-top: -4px;
@@ -55,22 +55,32 @@
   box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
 }
 .navTabs h2 {
-  color: #FC0B0B;
+  color: #fc0b0b;
   border-bottom: 4px solid #002a47;
   text-align: center;
   font-weight: 600;
   margin-bottom: 40px;
 }
-.navTabs p {
-  border-bottom: 2px solid #FC0B0B;
-  margin: 15px 0px;
+.tabs {
+  border-bottom: 2px solid #fc0b0b;
+  margin: 0px;
   font-size: 20px;
   color: #002a47;
   cursor: pointer;
-  transition: all .3s;
+  padding: 0.69em;
+  /* background: linear-gradient(to right, #002a47, #002a47);
+  background-repeat: no-repeat;
+  background-size: 0 100%;
+  transition: background-size 1s 0s; */
 }
-.navTabs p:hover {
-  color: #FC0B0B;
+
+.tabs:hover{
+  /* background-size: 100% 100%; */
+  /* color: #fff; */
+}
+.active {
+  background:#002a47;
+  color: #fff;
 }
 
 .serviceProvide-content {
@@ -89,7 +99,7 @@
 }
 .vehicle-header {
   display: flex;
-  border-bottom: 3px solid #FC0B0B;
+  border-bottom: 3px solid #fc0b0b;
 }
 .vehicle-header .icon {
   margin-left: 100px;
@@ -110,7 +120,7 @@
 
 .review-header {
   padding-top: 5px;
-  border-bottom: 3px solid #FC0B0B;
+  border-bottom: 3px solid #fc0b0b;
 }
 .review-header h2 {
   text-align: center;
@@ -128,7 +138,6 @@
   width: 100%;
   transition: 0.3s ease-in-out;
   overflow: hidden;
-  
 }
 .Againchild {
   height: 100%;
@@ -156,15 +165,15 @@
   ); */
   padding: 40px;
 }
-.vehicle-text h4{
+.vehicle-text h4 {
   color: #002a47;
   font-weight: 700;
 }
-.vehicle-text h4 span{
-  color: #FC0B0B;
+.vehicle-text h4 span {
+  color: #fc0b0b;
   font-weight: 700;
 }
-.vehicle-text p{
+.vehicle-text p {
   color: #002a47;
 }
 
@@ -184,11 +193,10 @@
 .review-content img {
   width: 70px;
 }
-.first{
+.first {
   float: left;
   margin-left: 15px;
   margin-top: 15px;
-  
 }
 .last {
   transform: rotate(180deg);
