landing page done

--- a/src/Components/SharedComponents/Footer/Footer.css
+++ b/src/Components/SharedComponents/Footer/Footer.css
@@ -50,7 +50,7 @@
 }
 
 .copyright-footer-section {
-  background: #FC0B0B;
+  background: #002a47;
   text-align: center;
   font-family: "Poppins", sans-serif;
   padding: 10px 0px;
