--- a/src/Components/Home/ContactUs/ContactUs.css
+++ b/src/Components/Home/ContactUs/ContactUs.css
@@ -12,15 +12,16 @@
     margin-top: 52px !important;
     margin-left: 60px;
     width: 510px;
+    transition: all 0.6s;
 }
 .contact-content-container{
     width: 440px;
     background: rgb(255, 255, 255);
     border-radius: 10px;
-    padding: 50px 40px;
+    padding: 50px 30px;
     margin-top: 70px !important;
     font-family: "Poppins", sans-serif;
-    margin: auto;
+    margin-left: 60px;
     transition: all .6s;
 }
 .contact-content-container h2{
@@ -57,9 +58,11 @@
 
 .letsTalk-container{
     width: 5px;
+    
     background: #002a47;
     border-radius: 10px;
     margin-top: 70px;
+    margin-left: 60px;
     overflow: hidden;
     transition: all .6s;
 }
