--- a/src/Components/Home/ServiceProvide/ServiceProvide.css
+++ b/src/Components/Home/ServiceProvide/ServiceProvide.css
@@ -46,37 +46,52 @@
   display: flex;
   margin: 0px 40px;
 }
-.navTabs {
+.navTab {
   margin-top: 20px;
-  padding: 30px 50px;
+  padding: 40px 50px;
   background: #fff;
   height: auto;
   border-radius: 5px;
   box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
+  z-index: 1;
 }
-.navTabs h2 {
+.navTab h2 {
   color: #fc0b0b;
   border-bottom: 4px solid #002a47;
   text-align: center;
   font-weight: 600;
-  margin-bottom: 40px;
+  margin-bottom: 30px;
 }
-.tabs {
+.btns{
   border-bottom: 2px solid #fc0b0b;
-  margin: 0px;
+  background: none;
+  padding: 15px 10px;
   font-size: 20px;
-  color: #002a47;
   cursor: pointer;
-  padding: 0.69em;
-  /* background: linear-gradient(to right, #002a47, #002a47);
-  background-repeat: no-repeat;
-  background-size: 0 100%;
-  transition: background-size 1s 0s; */
+  position: relative;
+  overflow: hidden;
+  color: #002a47;
+  z-index: 3;
+  transition: 0.8s;
 }
-
-.tabs:hover{
-  /* background-size: 100% 100%; */
-  /* color: #fff; */
+.btns:hover{
+  color: #fff;
+}
+.btns::before{
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 0%;
+  background: #002a47;
+  color: #fff;
+  z-index: -2;
+  transition: 0.8s;
+  border-radius: 50% 50% 50 50;
+}
+.btns:hover::before{
+  height: 180%;
 }
 .active {
   background:#002a47;
@@ -149,22 +164,33 @@
 .child img {
   height: 100%;
   width: 100%;
-  /* opacity: 0.5; */
 }
 .vehicle-text {
-  width: 70%;
+  width: 60%;
   margin-top: -300px;
   margin-left: 100px;
   font-size: 14px;
-  /* background: linear-gradient(
-    to left,
-    rgba(117, 117, 117, 0.137),
-    rgba(221, 221, 221, 0.651),
-    rgba(138, 138, 138, 0.521)
-    
-  ); */
-  padding: 40px;
+  padding: 30px 35px;
+  z-index: 2;
+  position: relative;
+  
 }
+.vehicle-text::after{
+  content: "";
+  background: linear-gradient(
+    to left,
+    rgba(138, 138, 138, 0.082),
+    rgba(255, 255, 255, 0.747)
+    
+  );
+  position: absolute;
+  z-index: -1;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
 .vehicle-text h4 {
   color: #002a47;
   font-weight: 700;
@@ -175,6 +201,7 @@
 }
 .vehicle-text p {
   color: #002a47;
+  margin-bottom: -2px;
 }
 
 .review-user-content {
