--- a/src/Components/Home/PricingAndPlan/PricingAndPlan.css
+++ b/src/Components/Home/PricingAndPlan/PricingAndPlan.css
@@ -4,7 +4,7 @@
 .pp-before {
   width: 20px;
   height: 66px;
-  background: #FC0B0B;
+  background: #FA4319;
   position: absolute;
   margin-left: 490px;
   margin-top: -4px;
@@ -12,7 +12,7 @@
 .pp-after {
   width: 20px;
   height: 66px;
-  background: #FC0B0B;
+  background: #FA4319;
   position: absolute;
   margin-left: 786px;
   margin-top: -4px;
@@ -49,7 +49,7 @@
 .basic,
 .standard,
 .premium {
-  border: 10px solid #FC0B0B;
+  border: 10px solid #FA4319;
   width: 125px;
   height: 200px;
   margin: auto;
