--- a/src/Components/SharedComponents/Nav/Nav.css
+++ b/src/Components/SharedComponents/Nav/Nav.css
@@ -1,9 +1,17 @@
 /* Navbar css */
 .navbar {
   font-family: "Poppins", sans-serif;
-  box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px,
-    rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
+  background: #fff;
+  /* box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px,
+    rgba(0, 0, 0, 0.06) 0px 2px 4px -1px; */
+
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   height: 130px;
+  width: 100%;
+  position: fixed;
+  top: 0;
+  transition: all 1s;
+  z-index: 99999999999999999;
 }
 .navbar-container {
   width: 80%;
@@ -42,7 +50,7 @@
   color: green;
 }
 .clock-container .close {
-  color: #FC0B0B;
+  color: #FA4319;
   margin-left: 10px;
 }
 .social-container {
@@ -66,12 +74,12 @@
   font-weight: 500;
 }
 .nav-item:hover .nav-link{
-  color: #FC0B0B !important;
+  color: #FA4319 !important;
 }
 .login {
   margin-left: 135px;
   border-radius: 3px;
-  background: #FC0B0B;
+  background: #FA4319;
   padding: 0px 40px !important;
 }
 .login:hover .login-link{
