--- a/src/Components/BestEmployee/BestEmployee.css
+++ b/src/Components/BestEmployee/BestEmployee.css
@@ -1,3 +1,6 @@
+/* .best_employee_section{
+  margin-bottom: 150px;
+} */
 .bestEmployee-showcase {
   /* height: 100vh; */
   width: 100%;
@@ -89,10 +92,10 @@
 
 
 .best-employee-carousel-slider{
-    height: 390px;
-    width: 592px;
+    height: 386px;
+    width: 580px;
     position: absolute;
-    margin-top: -649px;
+    margin-top: -643px;
     margin-left: 960px;
     overflow: hidden;
     z-index: 2;
