--- a/src/Components/Home/PricingAndPlan/PricingAndPlan.css
+++ b/src/Components/Home/PricingAndPlan/PricingAndPlan.css
@@ -38,7 +38,7 @@
   font-family: "Poppins", sans-serif;
   background: linear-gradient(#c5d3dd85, #c5d3dd85),
   linear-gradient(#c5d3dd85, #c5d3dd85),
-    url(../../../assets/img/service-bg.png) center center;
+    url(../../../assets/img/service-bg.png) center center fixed;
   /* background-attachment: fixed; */
   background-repeat: no-repeat;
   background-size: cover;
