best branch page carousel details

--- a/src/Components/BestBranches/BestBranches.css
+++ b/src/Components/BestBranches/BestBranches.css
@@ -1,82 +1,94 @@
-.bestBranches-section{
-    overflow: hidden;
+.bestBranches-section {
+  overflow: hidden;
 }
 .bestBranches-showcase {
-    width: 100%;
-    overflow: hidden;
-    margin-top: 127px;
-    display: flex;
-  }
-  .bestBranches-content {
-    width: 40%;
-    font-family: "Poppins", sans-serif;
-    display: flex;
-  }
-  .bestBranches-content-title {
-    width: 500px;
-    color: #002a47;
-    margin-top: 180px;
-    margin-left: 300px;
-  }
-  .bestBranches-content-title h1 {
-    width: 500px;
-    font-size: 50px;
-    font-weight: 700;
-    /* margin-bottom: 40px; */
-    color: #002a47;
-  }
-  .bestBranches-content h1 span {
-    font-weight: 700;
-    color: #fa4319;
-  }
-  .bestBranches-content h1 small {
-    font-size: 25px;
-    font-weight: 600;
-    color: #fa4319;
-  }
-  .bestBranches-content-title p {
-    color: #fa4319;
-    margin: 40px 0px;
-  }
-  .bestBranches-content-title p span {
-    color: #002a47;
-  }
-  
-  .list p {
-    font-weight: 500;
-    font-size: 15px;
-    line-height: 22px;
-    color: #09273d;
-  }
-  .list p::before {
-    content: "";
-    width: 10px;
-    height: 10px;
-    background: #fa4319;
-    display: block;
-    float: left;
-    margin-right: -6px;
-    margin-top: 5px;
-  }
-  .list p::after {
-    content: "";
-    width: 10px;
-    height: 10px;
-    background: #09273d;
-    display: block;
-    float: left;
-    margin-right: 13px;
-    margin-top: 2px;
-  }
+  width: 100%;
+  overflow: hidden;
+  margin-top: 127px;
+  display: flex;
+}
+.bestBranches-content {
+  width: 40%;
+  font-family: "Poppins", sans-serif;
+  display: flex;
+}
+.bestBranches-content-title {
+  width: 700px;
+  position: absolute;
+  background: #fff;
+  color: #002a47;
+  margin-top: 180px;
+  margin-left: 300px;
+  border-right: 10px solid #002a47;
+  border-bottom: 10px solid #002a47;
+  z-index: 1;
+}
 
-  
-  .bestBranches-img-container {
-    width: 60%;
-    height: 80vh;
-    margin-left: auto;
-  }
-  .bestBranches-img-container img {
-    width: 100%;
-    height: 100%;
-    z-index: -1;
-  }
+.bestBranches-content-title:after {
+  border-top: 10px solid #09273d;
+  display: block;
+  position: absolute;
+  content: "";
+  left: 460.6px;
+  right: 0;
+  top: -10px;
+  width: 34.7%;
+}
+.bestBranches-content-title h1 {
+  width: 500px;
+  font-size: 50px;
+  font-weight: 700;
+  color: #002a47;
+}
+.bestBranches-content h1 span {
+  font-weight: 700;
+  color: #fa4319;
+}
+.bestBranches-content h1 small {
+  font-size: 25px;
+  font-weight: 600;
+  color: #fa4319;
+}
+.bestBranches-content-title p {
+  color: #fa4319;
+  margin: 40px 0px;
+}
+.bestBranches-content-title p span {
+  color: #002a47;
+}
+
+.list p {
+  font-weight: 500;
+  font-size: 15px;
+  line-height: 22px;
+  color: #09273d;
+}
+.list p::before {
+  content: "";
+  width: 10px;
+  height: 10px;
+  background: #fa4319;
+  display: block;
+  float: left;
+  margin-right: -6px;
+  margin-top: 5px;
+}
+.list p::after {
+  content: "";
+  width: 10px;
+  height: 10px;
+  background: #09273d;
+  display: block;
+  float: left;
+  margin-right: 13px;
+  margin-top: 2px;
+}
+
+.bestBranches-slider-container {
+  width: 60%;
+  height: 80vh;
+}
+.bestBranches-slider-container img {
+  width: 100%;
+  height: 720px;
+}
