--- a/src/Components/BestBranches/Branches/Branches.css
+++ b/src/Components/BestBranches/Branches/Branches.css
@@ -1,5 +1,5 @@
 .branches-container{
-    margin-top: 100px;
+    margin: 100px 0px;
     font-family: "Poppins", sans-serif;
   }
 .branches-header-before {
@@ -9,6 +9,7 @@
     position: absolute;
     margin-left: 490px;
     margin-top: -4px;
+    z-index: -1;
   }
   .branches-header-after {
     width: 20px;
@@ -17,6 +18,7 @@
     position: absolute;
     margin-left: 785px;
     margin-top: -4px;
+    z-index: -1;
   }
   .branches-header-header {
     text-align: center;
@@ -26,7 +28,6 @@
     width: 300px;
     padding: 5px;
     margin: auto;
-    z-index: 1;
   }
   .branches-header-header h1 {
     font-family: "Poppins", sans-serif !important;
