--- a/src/Components/Dashboard/Dashboard.css
+++ b/src/Components/Dashboard/Dashboard.css
@@ -14,6 +14,7 @@
   grid-row: 1/2;
 }
 .dashboard-navbar {
+  /* width: 85%; */
   height: 90px;
   background: #002a47;
   display: flex;
@@ -23,5 +24,30 @@
   padding: 0px 40px;
   font-family: "Poppins", sans-serif;
   font-size: 25px;
+  /* position: fixed; */
+}
 
+.content-search input{
+  width: 600px;
+  position: relative;
+  padding: 12px 20px;
+  border-radius: 30px;
+  outline: none;
+  border: none;
+  font-size: 15px;
+  font-weight: 100;
+  color: #5e5e5e;
+}
+.content-search span{
+  position: absolute;
+  margin-left: -40px;
+  margin-top: 8px;
+  color: #5e5e5e;
+  font-size: 20px;
+  cursor: pointer;
+}
+
+.user-profile{
+  border-radius: 50px;
+  overflow: hidden;
 }
