--- a/src/Components/Dashboard/TrackProduct/TrackProduct.css
+++ b/src/Components/Dashboard/TrackProduct/TrackProduct.css
@@ -7,19 +7,20 @@
 .track-product-shop-content {
   font-family: "Poppins", sans-serif;
   color: #002a47;
-  margin-left: 20%;
+  width: 70%;
+  margin: auto;
 }
 .track-product-container h2 {
   width: 220px;
   margin: auto;
-  margin-bottom: 40px !important;
+  margin-bottom: 50px !important;
   border-bottom: 4px solid saddlebrown;
   padding: 7px 0px;
   font-weight: 600;
 }
 .shop-details {
   text-align: left;
-  margin: 20px 0px;
+  margin: 10px 0px;
   display: flex;
 }
 .shop-details span {
